--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
 		"test": "npm run compile && node ./node_modules/vscode/bin/test"
 	},
 	"devDependencies": {
-		"typescript": "^3.3.1",
-		"vscode": "^1.1.28",
-		"tslint": "^5.12.1",
+		"@types/mocha": "^2.2.42",
 		"@types/node": "^10.12.21",
-		"@types/mocha": "^2.2.42"
+		"tslint": "^5.12.1",
+		"typescript": "^3.3.1",
+		"vscode": "^1.1.36"
 	},
 	"dependencies": {
-		"extract-zip": "^1.6.7"
+		"extract-zip": "^1.6.7",
+		"request": "^2.88.0"
 	}
 }
