add MicroProfile category to MicroProfile Starter command
Signed-off-by: Kathryn Kodama <kathryn.s.kodama@gmail.com>

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"commands": [
 			{
 				"command": "extension.microProfileStarter",
-				"title": "MicroProfile Starter"
+				"title": "MicroProfile: MicroProfile Starter"
 			}
 		]
 	},
