used category label instead of appending to title
Signed-off-by: Kathryn Kodama <kathryn.s.kodama@gmail.com>

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"commands": [
 			{
 				"command": "extension.microProfileStarter",
-				"title": "MicroProfile: MicroProfile Starter"
+				"category": "MicroProfile",
+				"title": "MicroProfile Starter"
 			}
 		]
 	},
