add MicroProfile category to MicroProfile Starter command (#12)
* add MicroProfile category to MicroProfile Starter command

Signed-off-by: Kathryn Kodama <kathryn.s.kodama@gmail.com>

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"commands": [
 			{
 				"command": "extension.microProfileStarter",
+				"category": "MicroProfile",
 				"title": "MicroProfile Starter"
 			}
 		]
