--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,12 @@
 {
   "root": true,
   "parser": "@typescript-eslint/parser",
-  "plugins": [
-    "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint", "prettier"],
   "extends": [
     "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+    "prettier/@typescript-eslint",
+    "plugin:prettier/recommended"
   ],
   "rules": {
     "@typescript-eslint/semi": "warn",
@@ -29,10 +28,9 @@
     ]
   },
   "env": {
-    "node": true
+    "node": true,
+    "mocha": true,
+    "es6": true
   },
-  "ignorePatterns": [
-    "node_modules",
-    "out"
-  ]
+  "ignorePatterns": ["node_modules", "out"]
 }
