--- a/package.json
+++ b/package.json
@@ -45,24 +45,30 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test",
+    "pretest": "npm run compile",
+    "test": "node ./out/test/runTest.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.8",
     "@types/extract-zip": "^1.6.2",
-    "@types/mocha": "^2.2.42",
+    "@types/glob": "^7.1.1",
+    "@types/mocha": "^5.2.7",
     "@types/node": "^10.12.21",
     "@types/node-fetch": "^2.5.4",
+    "@types/vscode": "^1.35.0",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
+    "chai": "^4.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "glob": "^7.1.5",
+    "mocha": "^6.2.2",
     "prettier": "^1.19.1",
     "typescript": "^3.3.1",
-    "vscode": "^1.1.36"
+    "vscode-test": "^1.3.0"
   },
   "dependencies": {
     "extract-zip": "^1.6.7",
