--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "vscode:prepublish": "npm run compile",
     "compile": "webpack --mode production",
     "watch": "webpack --mode development --watch",
-    "pretest": "npm run compile",
+    "pretest": "npm run test-compile",
     "test": "node ./out/test/runTest.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
@@ -77,7 +77,6 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.14",
-    "node-fetch": "^2.6.1",
-    "original-fs": "^1.1.0"
+    "node-fetch": "^2.6.1"
   }
 }
