--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile",
+    "compile": "webpack --mode production",
+    "watch": "webpack --mode development --watch",
+    "pretest": "npm run test-compile",
     "test": "node ./out/test/runTest.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "test-compile": "tsc -p ./"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
@@ -68,8 +69,11 @@
     "glob": "^7.1.5",
     "mocha": "^7.1.1",
     "prettier": "^1.19.1",
+    "ts-loader": "^8.0.5",
     "typescript": "^3.3.1",
-    "vscode-test": "^1.3.0"
+    "vscode-test": "^1.3.0",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.1.0"
   },
   "dependencies": {
     "adm-zip": "^0.4.14",
