Use webpack dev build when running extension
Signed-off-by: Ryan Zegray <ryan.zegray@ibm.com>

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,11 +1,9 @@
-.vscode/**
-.vscode-test/**
-out/test/**
-src/**
+.vscode
 .gitignore
-vsc-extension-quickstart.md
-**/tsconfig.json
-**/tslint.json
-**/*.map
-**/*.ts
+.vscode-test
+node_modules
+out/
+src/
+tsconfig.json
 webpack.config.js
+.travis.yml
