--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "activationEvents": [
     "onCommand:extension.microProfileStarter"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -45,11 +45,11 @@
     "vscode:prepublish": "npm run compile",
     "compile": "webpack --mode production",
     "watch": "webpack --mode development --watch",
+    "test-compile": "tsc -p ./",
     "pretest": "npm run test-compile",
     "test": "node ./out/test/runTest.js",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "test-compile": "tsc -p ./"
+    "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.4.32",
