--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mp-starter-vscode-ext",
   "displayName": "MicroProfile Starter",
-  "description": "Generate Java Microservice Maven projects using Eclipse MicroProfile",
-  "version": "0.2.5",
+  "description": "Generate Java microservice Maven projects using MicroProfile",
+  "version": "0.2.6",
   "publisher": "MicroProfile-Community",
   "preview": true,
   "license": "Apache-2.0",
