--- a/.github/workflows/mp-starter-vscode.yml
+++ b/.github/workflows/mp-starter-vscode.yml
@@ -9,10 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2 
